Database Model (wip)

--- a/notebooks/Dummy Pipeline - NASA Data.ipynb
+++ b/notebooks/Dummy Pipeline - NASA Data.ipynb
@@ -18,30 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from mlblocks import add_primitives_path, MLPipeline\n",
     "\n",
-    "from orion.data import load_nasa_signal\n",
+    "from orion.data import load_signal\n",
     "\n",
-    "train, test = load_nasa_signal('P-3', test_size=0.3)"
+    "data = load_signal('S-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10149, 2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "add_primitives_path('../orion/primitives')"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +67,12 @@
     "            'method': 'mean'\n",
     "        },\n",
     "        'orion.detectors.ThresholdDetector#1': {\n",
-    "            'ratio': 0.5\n",
+    "            'ratio': 0.01\n",
     "        },\n",
     "        'orion.intervals.build_anomaly_intervals#1': {\n",
-    "            'time_column': 'timestamp'\n",
+    "            'time_column': 'timestamp',\n",
+    "            'indices': True,\n",
+    "            'severity': True\n",
     "        }\n",
     "    }\n",
     "}"
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,26 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlpipeline.fit(train)"
+    "mlpipeline.fit(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomalies = mlpipeline.predict(test)\n",
-    "anomalies = pd.DataFrame(anomalies, columns=['start', 'end', 'severity'])"
+    "anomalies = mlpipeline.predict(data)\n",
+    "anomalies = pd.DataFrame(anomalies, columns=['start_ts', 'end_ts', 'start', 'end', 'severity'])\n",
+    "anomalies = anomalies[['start_ts', 'end_ts', 'severity']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -119,65 +133,142 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
+       "      <th>start_ts</th>\n",
+       "      <th>end_ts</th>\n",
        "      <th>severity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1523232000</td>\n",
-       "      <td>1523253600</td>\n",
-       "      <td>0.341659</td>\n",
+       "      <td>1222819200</td>\n",
+       "      <td>1229320800</td>\n",
+       "      <td>0.338603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1523275200</td>\n",
-       "      <td>1523296800</td>\n",
-       "      <td>0.525991</td>\n",
+       "      <td>1229342400</td>\n",
+       "      <td>1233489600</td>\n",
+       "      <td>0.332228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1523383200</td>\n",
-       "      <td>1523491200</td>\n",
-       "      <td>0.197364</td>\n",
+       "      <td>1233511200</td>\n",
+       "      <td>1246212000</td>\n",
+       "      <td>0.329621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1523815200</td>\n",
-       "      <td>1523880000</td>\n",
-       "      <td>0.069584</td>\n",
+       "      <td>1246233600</td>\n",
+       "      <td>1268071200</td>\n",
+       "      <td>0.335394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1524290400</td>\n",
-       "      <td>1524312000</td>\n",
-       "      <td>0.016495</td>\n",
+       "      <td>1268092800</td>\n",
+       "      <td>1293818400</td>\n",
+       "      <td>0.334081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1293840000</td>\n",
+       "      <td>1300255200</td>\n",
+       "      <td>0.340247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1300276800</td>\n",
+       "      <td>1302048000</td>\n",
+       "      <td>0.351320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1302069600</td>\n",
+       "      <td>1306584000</td>\n",
+       "      <td>0.336726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1306605600</td>\n",
+       "      <td>1320926400</td>\n",
+       "      <td>0.322340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1320948000</td>\n",
+       "      <td>1322935200</td>\n",
+       "      <td>0.370946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1322956800</td>\n",
+       "      <td>1333281600</td>\n",
+       "      <td>0.330883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1333303200</td>\n",
+       "      <td>1352592000</td>\n",
+       "      <td>0.333190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1352613600</td>\n",
+       "      <td>1381752000</td>\n",
+       "      <td>0.322367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1381773600</td>\n",
+       "      <td>1440439200</td>\n",
+       "      <td>0.370307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1440460800</td>\n",
+       "      <td>1440568800</td>\n",
+       "      <td>0.378627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1440590400</td>\n",
+       "      <td>1442016000</td>\n",
+       "      <td>0.323372</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        start         end  severity\n",
-       "0  1523232000  1523253600  0.341659\n",
-       "1  1523275200  1523296800  0.525991\n",
-       "2  1523383200  1523491200  0.197364\n",
-       "3  1523815200  1523880000  0.069584\n",
-       "4  1524290400  1524312000  0.016495"
+       "      start_ts      end_ts  severity\n",
+       "0   1222819200  1229320800  0.338603\n",
+       "1   1229342400  1233489600  0.332228\n",
+       "2   1233511200  1246212000  0.329621\n",
+       "3   1246233600  1268071200  0.335394\n",
+       "4   1268092800  1293818400  0.334081\n",
+       "5   1293840000  1300255200  0.340247\n",
+       "6   1300276800  1302048000  0.351320\n",
+       "7   1302069600  1306584000  0.336726\n",
+       "8   1306605600  1320926400  0.322340\n",
+       "9   1320948000  1322935200  0.370946\n",
+       "10  1322956800  1333281600  0.330883\n",
+       "11  1333303200  1352592000  0.333190\n",
+       "12  1352613600  1381752000  0.322367\n",
+       "13  1381773600  1440439200  0.370307\n",
+       "14  1440460800  1440568800  0.378627\n",
+       "15  1440590400  1442016000  0.323372"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anomalies['start'] = anomalies['start'].astype(int)\n",
-    "anomalies['end'] = anomalies['end'].astype(int)\n",
+    "anomalies['start_ts'] = anomalies['start_ts'].astype(int)\n",
+    "anomalies['end_ts'] = anomalies['end_ts'].astype(int)\n",
     "\n",
-    "anomalies.head()"
+    "anomalies"
    ]
   }
  ],
