--- a/notebooks/Dummy Pipeline - NASA Data.ipynb
+++ b/notebooks/Dummy Pipeline - NASA Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "(10149, 2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,24 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = {\n",
     "    'primitives': [\n",
-    "        'orion.estimators.MeanEstimator',\n",
-    "        'orion.detectors.ThresholdDetector',\n",
-    "        'orion.intervals.build_anomaly_intervals'\n",
+    "        'orion.primitives.estimators.MeanEstimator',\n",
+    "        'orion.primitives.detectors.ThresholdDetector',\n",
+    "        'orion.primitives.intervals.build_anomaly_intervals'\n",
     "    ],\n",
     "    'init_params': {\n",
-    "        'mlprimitives.custom.trivial.TrivialPredictor#1': {\n",
-    "            'method': 'mean'\n",
-    "        },\n",
-    "        'orion.detectors.ThresholdDetector#1': {\n",
+    "        'orion.primitives.detectors.ThresholdDetector#1': {\n",
     "            'ratio': 0.01\n",
     "        },\n",
-    "        'orion.intervals.build_anomaly_intervals#1': {\n",
+    "        'orion.primitives.intervals.build_anomaly_intervals#1': {\n",
     "            'time_column': 'timestamp',\n",
     "            'indices': True,\n",
     "            'severity': True\n",
@@ -80,16 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "mlpipeline = MLPipeline.from_dict(pipeline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +264,7 @@
        "15  1440590400  1442016000  0.323372"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
