fixing the `Analysis Example` notebook

--- a/notebooks/Analysis Example.ipynb
+++ b/notebooks/Analysis Example.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis on NASA data using a dummy pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a demo notebook showing how to use a pipeline to analyze the `S-1` dataset. It also shows how to list events and comments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orex = OrionExplorer('orion')"
+    "orex = OrionExplorer('user-id', 'orion')"
    ]
   },
   {
@@ -34,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = orex.add_dataset('S-1', 'S-1', None)"
+    "ds = orex.add_dataset('S-1', 'S-1', None, None, None)"
    ]
   },
   {
@@ -64,9 +78,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dataset_id</th>\n",
+       "      <th>created_by</th>\n",
        "      <th>insert_time</th>\n",
        "      <th>name</th>\n",
-       "      <th>signal</th>\n",
+       "      <th>signal_set</th>\n",
        "      <th>timestamp_column</th>\n",
        "      <th>value_column</th>\n",
        "    </tr>\n",
@@ -74,8 +89,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465646c1cea1665749551</td>\n",
-       "      <td>2019-02-25 22:00:04.292</td>\n",
+       "      <td>5c8a817a1854814a0156149b</td>\n",
+       "      <td>user-id</td>\n",
+       "      <td>2019-03-14 16:29:46.113</td>\n",
        "      <td>S-1</td>\n",
        "      <td>S-1</td>\n",
        "      <td>0</td>\n",
@@ -86,11 +102,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                 dataset_id             insert_time name signal  \\\n",
-       "0  5c7465646c1cea1665749551 2019-02-25 22:00:04.292  S-1    S-1   \n",
+       "                 dataset_id created_by             insert_time name  \\\n",
+       "0  5c8a817a1854814a0156149b    user-id 2019-03-14 16:29:46.113  S-1   \n",
        "\n",
-       "   timestamp_column  value_column  \n",
-       "0                 0             1  "
+       "  signal_set  timestamp_column  value_column  \n",
+       "0        S-1                 0             1  "
       ]
      },
      "execution_count": 5,
@@ -149,6 +165,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>pipeline_id</th>\n",
+       "      <th>created_by</th>\n",
        "      <th>insert_time</th>\n",
        "      <th>mlpipeline</th>\n",
        "      <th>name</th>\n",
@@ -157,8 +174,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465656c1cea1665749552</td>\n",
-       "      <td>2019-02-25 22:00:05.776</td>\n",
+       "      <td>5c8a817b1854814a0156149c</td>\n",
+       "      <td>user-id</td>\n",
+       "      <td>2019-03-14 16:29:47.875</td>\n",
        "      <td>{'primitives': ['orion.primitives.estimators.M...</td>\n",
        "      <td>dummy</td>\n",
        "    </tr>\n",
@@ -167,8 +185,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                pipeline_id             insert_time  \\\n",
-       "0  5c7465656c1cea1665749552 2019-02-25 22:00:05.776   \n",
+       "                pipeline_id created_by             insert_time  \\\n",
+       "0  5c8a817b1854814a0156149c    user-id 2019-03-14 16:29:47.875   \n",
        "\n",
        "                                          mlpipeline   name  \n",
        "0  {'primitives': ['orion.primitives.estimators.M...  dummy  "
@@ -256,38 +274,42 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>datarun_id</th>\n",
+       "      <th>created_by</th>\n",
        "      <th>dataset</th>\n",
        "      <th>end_time</th>\n",
        "      <th>events</th>\n",
        "      <th>insert_time</th>\n",
        "      <th>pipeline</th>\n",
        "      <th>start_time</th>\n",
+       "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>5c7465646c1cea1665749551</td>\n",
-       "      <td>2019-02-25 22:00:09.093</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>user-id</td>\n",
+       "      <td>5c8a817a1854814a0156149b</td>\n",
+       "      <td>2019-03-14 16:30:00.499</td>\n",
        "      <td>926</td>\n",
-       "      <td>2019-02-25 22:00:09.094</td>\n",
-       "      <td>5c7465656c1cea1665749552</td>\n",
-       "      <td>2019-02-25 22:00:09.084</td>\n",
+       "      <td>2019-03-14 16:29:58.534</td>\n",
+       "      <td>5c8a817b1854814a0156149c</td>\n",
+       "      <td>2019-03-14 16:29:58.532</td>\n",
+       "      <td>done</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 datarun_id                   dataset                end_time  \\\n",
-       "0  5c7465696c1cea1665749553  5c7465646c1cea1665749551 2019-02-25 22:00:09.093   \n",
+       "                 datarun_id created_by                   dataset  \\\n",
+       "0  5c8a81861854814a0156149d    user-id  5c8a817a1854814a0156149b   \n",
        "\n",
-       "   events             insert_time                  pipeline  \\\n",
-       "0     926 2019-02-25 22:00:09.094  5c7465656c1cea1665749552   \n",
+       "                 end_time  events             insert_time  \\\n",
+       "0 2019-03-14 16:30:00.499     926 2019-03-14 16:29:58.534   \n",
        "\n",
-       "               start_time  \n",
-       "0 2019-02-25 22:00:09.084  "
+       "                   pipeline              start_time status  \n",
+       "0  5c8a817b1854814a0156149c 2019-03-14 16:29:58.532   done  "
       ]
      },
      "execution_count": 11,
@@ -337,9 +359,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465696c1cea1665749554</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.150</td>\n",
+       "      <td>5c8a81861854814a0156149e</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.594</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
@@ -347,9 +369,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c7465696c1cea1665749555</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.204</td>\n",
+       "      <td>5c8a81861854814a0156149f</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.638</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223013600</td>\n",
        "      <td>1223035200</td>\n",
@@ -357,9 +379,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5c7465696c1cea1665749556</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.208</td>\n",
+       "      <td>5c8a81861854814a015614a0</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.642</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223510400</td>\n",
        "      <td>1223532000</td>\n",
@@ -367,9 +389,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5c7465696c1cea1665749557</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.213</td>\n",
+       "      <td>5c8a81861854814a015614a1</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.646</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223575200</td>\n",
        "      <td>1223596800</td>\n",
@@ -377,9 +399,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5c7465696c1cea1665749558</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.218</td>\n",
+       "      <td>5c8a81861854814a015614a2</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.651</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223618400</td>\n",
        "      <td>1223640000</td>\n",
@@ -391,11 +413,11 @@
       ],
       "text/plain": [
        "                   event_id                   datarun             insert_time  \\\n",
-       "0  5c7465696c1cea1665749554  5c7465696c1cea1665749553 2019-02-25 22:00:09.150   \n",
-       "1  5c7465696c1cea1665749555  5c7465696c1cea1665749553 2019-02-25 22:00:09.204   \n",
-       "2  5c7465696c1cea1665749556  5c7465696c1cea1665749553 2019-02-25 22:00:09.208   \n",
-       "3  5c7465696c1cea1665749557  5c7465696c1cea1665749553 2019-02-25 22:00:09.213   \n",
-       "4  5c7465696c1cea1665749558  5c7465696c1cea1665749553 2019-02-25 22:00:09.218   \n",
+       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d 2019-03-14 16:29:58.594   \n",
+       "1  5c8a81861854814a0156149f  5c8a81861854814a0156149d 2019-03-14 16:29:58.638   \n",
+       "2  5c8a81861854814a015614a0  5c8a81861854814a0156149d 2019-03-14 16:29:58.642   \n",
+       "3  5c8a81861854814a015614a1  5c8a81861854814a0156149d 2019-03-14 16:29:58.646   \n",
+       "4  5c8a81861854814a015614a2  5c8a81861854814a0156149d 2019-03-14 16:29:58.651   \n",
        "\n",
        "      score  start_time   stop_time  comments  \n",
        "0  0.572644  1222970400  1222992000         0  \n",
@@ -471,9 +493,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465696c1cea1665749554</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.150</td>\n",
+       "      <td>5c8a81861854814a0156149e</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.594</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
@@ -481,9 +503,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c7465696c1cea1665749555</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.204</td>\n",
+       "      <td>5c8a81861854814a0156149f</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.638</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223013600</td>\n",
        "      <td>1223035200</td>\n",
@@ -491,9 +513,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5c7465696c1cea1665749556</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.208</td>\n",
+       "      <td>5c8a81861854814a015614a0</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.642</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223510400</td>\n",
        "      <td>1223532000</td>\n",
@@ -501,9 +523,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5c7465696c1cea1665749557</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.213</td>\n",
+       "      <td>5c8a81861854814a015614a1</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.646</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223575200</td>\n",
        "      <td>1223596800</td>\n",
@@ -511,9 +533,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5c7465696c1cea1665749558</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.218</td>\n",
+       "      <td>5c8a81861854814a015614a2</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
+       "      <td>2019-03-14 16:29:58.651</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1223618400</td>\n",
        "      <td>1223640000</td>\n",
@@ -525,11 +547,11 @@
       ],
       "text/plain": [
        "                   event_id                   datarun             insert_time  \\\n",
-       "0  5c7465696c1cea1665749554  5c7465696c1cea1665749553 2019-02-25 22:00:09.150   \n",
-       "1  5c7465696c1cea1665749555  5c7465696c1cea1665749553 2019-02-25 22:00:09.204   \n",
-       "2  5c7465696c1cea1665749556  5c7465696c1cea1665749553 2019-02-25 22:00:09.208   \n",
-       "3  5c7465696c1cea1665749557  5c7465696c1cea1665749553 2019-02-25 22:00:09.213   \n",
-       "4  5c7465696c1cea1665749558  5c7465696c1cea1665749553 2019-02-25 22:00:09.218   \n",
+       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d 2019-03-14 16:29:58.594   \n",
+       "1  5c8a81861854814a0156149f  5c8a81861854814a0156149d 2019-03-14 16:29:58.638   \n",
+       "2  5c8a81861854814a015614a0  5c8a81861854814a0156149d 2019-03-14 16:29:58.642   \n",
+       "3  5c8a81861854814a015614a1  5c8a81861854814a0156149d 2019-03-14 16:29:58.646   \n",
+       "4  5c8a81861854814a015614a2  5c8a81861854814a0156149d 2019-03-14 16:29:58.651   \n",
        "\n",
        "      score  start_time   stop_time  comments  \n",
        "0  0.572644  1222970400  1222992000         2  \n",
@@ -576,32 +598,38 @@
        "      <th></th>\n",
        "      <th>event_id</th>\n",
        "      <th>datarun</th>\n",
-       "      <th>insert_time</th>\n",
        "      <th>score</th>\n",
        "      <th>start_time</th>\n",
        "      <th>stop_time</th>\n",
+       "      <th>comment_id</th>\n",
+       "      <th>created_by</th>\n",
+       "      <th>insert_time</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5c7465696c1cea1665749554</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.150</td>\n",
+       "      <td>5c8a81861854814a0156149e</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
+       "      <td>5c8a818d1854814a0156183c</td>\n",
+       "      <td>user-id</td>\n",
+       "      <td>2019-03-14 16:30:05.449</td>\n",
        "      <td>This is a comment example.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5c7465696c1cea1665749554</td>\n",
-       "      <td>5c7465696c1cea1665749553</td>\n",
-       "      <td>2019-02-25 22:00:09.150</td>\n",
+       "      <td>5c8a81861854814a0156149e</td>\n",
+       "      <td>5c8a81861854814a0156149d</td>\n",
        "      <td>0.572644</td>\n",
        "      <td>1222970400</td>\n",
        "      <td>1222992000</td>\n",
+       "      <td>5c8a818e1854814a0156183d</td>\n",
+       "      <td>user-id</td>\n",
+       "      <td>2019-03-14 16:30:06.514</td>\n",
        "      <td>This is another comment.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -609,13 +637,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                   event_id                   datarun             insert_time  \\\n",
-       "0  5c7465696c1cea1665749554  5c7465696c1cea1665749553 2019-02-25 22:00:09.150   \n",
-       "1  5c7465696c1cea1665749554  5c7465696c1cea1665749553 2019-02-25 22:00:09.150   \n",
+       "                   event_id                   datarun     score  start_time  \\\n",
+       "0  5c8a81861854814a0156149e  5c8a81861854814a0156149d  0.572644  1222970400   \n",
+       "1  5c8a81861854814a0156149e  5c8a81861854814a0156149d  0.572644  1222970400   \n",
        "\n",
-       "      score  start_time   stop_time                        text  \n",
-       "0  0.572644  1222970400  1222992000  This is a comment example.  \n",
-       "1  0.572644  1222970400  1222992000    This is another comment.  "
+       "    stop_time                comment_id created_by             insert_time  \\\n",
+       "0  1222992000  5c8a818d1854814a0156183c    user-id 2019-03-14 16:30:05.449   \n",
+       "1  1222992000  5c8a818e1854814a0156183d    user-id 2019-03-14 16:30:06.514   \n",
+       "\n",
+       "                         text  \n",
+       "0  This is a comment example.  \n",
+       "1    This is another comment.  "
       ]
      },
      "execution_count": 16,
